--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,18 @@ body {
     font-style: normal;
 }
 
+.nav-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.nav-link:hover:focus {
+    color: #404bbf;
+}
+
 .contact-info {
     font-size: 16px;
     line-height: 1.5;
