--- a/css/style.css
+++ b/css/style.css
@@ -18,16 +18,16 @@ body {
     color: #2e2f42;
 }
 
+.link-first {
+    color: #434455;
+}
+
 .nav-menu {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-}
-
-.nav-menu-first {
-    color: #434455;
 }
 
 .nav-menu:hover:after {
