--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,16 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #434455;
+    color: #2e2f42;
 }
 
 .nav-link:hover,
 .nav-link:focus {
     color: #404bbf;
+}
+
+.nav-link-mail {
+    color: #434455;
 }
 
 .contact-info {
