--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,18 @@ body {
     font-style: normal;
 }
 
+.address a.nav-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.address a.nav-link:hover,
+.address a.nav-link:focus {
+    color: #404bbf;
+}
+
 .nav-link {
     font-weight: 500;
     font-size: 16px;
