--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ body {
 }
 
 .address a.nav-link {
+    color: #434455;
+}
+
+.address a.nav-link {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
