--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body {
   color: #2e2f42;
 }
 
-.nav-menu:hover:after {
+.nav-menu a:hover,
+.nav-menu a:focus {
   color: #404bbf;
 }
 
@@ -49,7 +50,7 @@ body {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.32px;
 }
 
